修正轰龙套数据

--- a/src/index.html
+++ b/src/index.html
@@ -47,12 +47,15 @@
 			<i class="icon-circle-with-cross" ms-click="$remove"></i>
 		</section>
 		<footer><a class="btn" href="javascript:;" ms-click="listSkill">添加需求</a></footer>
+		<footer>已有护石请勾选这里<input type="checkbox" name="hasStone" ms-duplex-checked="hasStone"/>，并在上面的需求当中减去护石上已有的数值</footer>
 	</section>
 
 	<footer><a class="btn" href="javascript:;" ms-click="calc" ms-if="selected.size() != 0">开始配装</a><a class="btn" href="javascript:;" ms-click="reload">重新读取数据</a></footer>
 
-	<section class="with-header" ms-if="armor.size() > 0">
-		<header>配装结果</header>
+	<header class="result" ms-if="result!=''"><span>{{result}}</span></header>
+
+	<section class="with-header" ms-if="result!=''">
+		<header>防具</header>
 		<section ms-repeat-armor="armor" class="chosen" ms-class="on:armor.o">
 			<header>{{armor.n}}（{{armor.h}}）</header>
 			：{{skillJoin(armor.s)}}
@@ -61,7 +64,7 @@
 		</section>
 	</section>
 
-	<section class="with-header" ms-if="gem.size() > 0">
+	<section class="with-header" ms-if="gem.size()>0 && result!=''">
 		<header>技能珠</header>
 		<section ms-repeat-gem="gem" class="chosen" ms-class="on:gem.o">
 			<header>{{gem.n}}*{{gem.use}}</header>
@@ -71,13 +74,13 @@
 		</section>
 	</section>
 
-	<section class="with-header" ms-if="armor.size() > 0">
+	<section class="with-header" ms-if="result!=''">
 		<header>已拥有技能</header>
 		<section ms-repeat="own" class="own" ms-class-1="secondary:$index>=selected.size()" ms-class-2="hide:secondary"><span>{{el.n}}</span>:{{el.v}}</section>
 		<i class="icon-chevron-with-circle-right own-alias" ms-class="on:secondary" ms-click="showSecondary"></i>
 	</section>
 
-	<section class="with-header" ms-if="stone.size() > 0">
+	<section class="with-header" ms-if="stone.size()>0 && result!='无法配出' && result!=''">
 		<header>可选择的护石及其上限</header>
 		<table class="stone">
 			<tr>
@@ -108,7 +111,7 @@
 			{{info}}
 		</div>
 		<div class="content" ms-if="popup == 'before_loading'">
-			初次载入或重新读取数据会载入2m多的数据文件，建议不要在移动环境载入，避免燃烧流量<br>
+			当前版本为轰龙套数据修复版本，初次载入或重新读取数据会载入2m多的数据文件，建议不要在移动环境载入，避免燃烧流量<br>
 			<a class="btn" href="javascript:;" ms-click="load">确定载入</a>
 		</div>
 	</div>
