采用新的数据获取方法

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 <meta charset="utf-8">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>mho半自动配装器——剑极狼版本</title>
+<title>mho半自动配装器——by water_junket</title>
 <!-- Place favicon.ico in the root directory -->
 
 <!-- build:css styles/vendor.css -->
@@ -20,8 +20,8 @@
 <!-- build:js scripts/vendor/modernizr.js -->
 <!-- endbuild -->
 
-	<!-- build:js scripts/vendor.js -->
-	<script type="text/javascript" src="lib/avalon/dist/avalon.modern.min.js" defer></script>
+<!-- build:js scripts/vendor.js -->
+<script type="text/javascript" src="lib/avalon/dist/avalon.modern.min.js" defer></script>
 <!-- endbuild -->
 
 <!-- build:js scripts/main.js -->
@@ -111,7 +111,9 @@
 			{{info}}
 		</div>
 		<div class="content" ms-if="popup == 'before_loading'">
-			当前版本为剑极狼版本，初次载入或重新读取数据会载入2m多的数据文件，建议不要在移动环境载入，避免燃烧流量<br>
+			<span ms-if="last">当前数据于{{last|date("yy/MM/dd HH:mm")}}获取，如需重新读取</span>
+			<span ms-if="!last">初次载入</span>
+			数据会载入2m多的数据文件，建议不要在移动环境载入，避免燃烧流量<br>
 			<a class="btn" href="javascript:;" ms-click="load">确定载入</a>
 		</div>
 	</div>
